--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -18,7 +18,13 @@
                 app:destination="@id/signUpFragment" />
         <action
                 android:id="@+id/action_mainFragment_to_homeFragment"
-                app:destination="@id/homeFragment" />
+                app:destination="@id/navigation_home"
+                app:popUpTo="@+id/mainFragment"
+                app:popUpToInclusive="true" />
+        <argument
+                android:name="action"
+                app:argType="string"
+                android:defaultValue="none" />
     </fragment>
     <fragment
             android:id="@+id/signInFragment"
@@ -27,7 +33,7 @@
             tools:layout="@layout/fragment_sign_in" >
         <action
                 android:id="@+id/action_signInFragment_to_homeFragment"
-                app:destination="@id/homeFragment"
+                app:destination="@id/navigation_home"
                 app:popUpTo="@id/mainFragment"
                 app:popUpToInclusive="true"/>
     </fragment>
@@ -38,13 +44,34 @@
             tools:layout="@layout/fragment_sign_up" >
         <action
                 android:id="@+id/action_signUpFragment_to_homeFragment"
-                app:destination="@id/homeFragment"
+                app:destination="@id/navigation_home"
                 app:popUpTo="@id/mainFragment"
                 app:popUpToInclusive="true"/>
     </fragment>
     <fragment
-            android:id="@+id/homeFragment"
+            android:id="@+id/navigation_home"
             android:name="com.example.studypal.HomeFragment"
             android:label="fragment_home"
-            tools:layout="@layout/fragment_home" />
+            tools:layout="@layout/fragment_home" >
+        <action
+                android:id="@+id/action_homeFragment_to_mainFragment"
+                app:destination="@id/mainFragment"
+                app:popUpTo="@+id/mainFragment"
+                app:popUpToInclusive="true" />
+    </fragment>
+    <fragment
+            android:id="@+id/navigation_profile"
+            android:name="com.example.studypal.ProfileFragment"
+            android:label="fragment_profile"
+            tools:layout="@layout/fragment_profile" />
+    <fragment
+            android:id="@+id/navigation_settings"
+            android:name="com.example.studypal.SettingsFragment"
+            android:label="fragment_settings"
+            tools:layout="@layout/fragment_settings" />
+    <fragment
+            android:id="@+id/navigation_social"
+            android:name="com.example.studypal.SocialFragment"
+            android:label="fragment_social"
+            tools:layout="@layout/fragment_social" />
 </navigation>
