--- a/app/src/main/res/layout/fragment_stream_settings.xml
+++ b/app/src/main/res/layout/fragment_stream_settings.xml
@@ -39,4 +39,14 @@
             app:layout_constraintStart_toStartOf="@+id/switch2"
             app:layout_constraintTop_toBottomOf="@+id/switch2" />
 
+    <Button
+            android:id="@+id/start_button"
+            android:text="@string/start_session"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/switch3" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
