--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -88,7 +88,9 @@
             tools:layout="@layout/fragment_stream_settings" >
         <action
                 android:id="@+id/action_streamSettingsFragment_to_soloSessionFragment"
-                app:destination="@id/soloSessionFragment" />
+                app:destination="@id/soloSessionFragment"
+                app:popUpTo="@id/streamSettingsFragment"
+                app:popUpToInclusive="true"/>
     </fragment>
     <fragment
             android:id="@+id/soloSessionFragment"
