--- a/app/src/main/res/layout/fragment_solo_session.xml
+++ b/app/src/main/res/layout/fragment_solo_session.xml
@@ -34,7 +34,7 @@ tools:context=".SoloSessionFragment">
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="208dp"
-            android:text="Session"
+            android:text="@string/session_text"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/timeLeftTextWiev"
             app:layout_constraintStart_toStartOf="parent"
